--- a/package.json
+++ b/package.json
@@ -42,13 +42,8 @@
     "ember-addon"
   ],
   "dependencies": {
-    "broccoli-plugin": "^1.2.1",
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.3",
-    "mkdirp": "^0.5.1",
-    "rsvp": "^3.2.1",
-    "symlink-or-copy": "^1.1.3",
-    "walk-sync": "^0.2.6"
+    "ember-cli-htmlbars": "^1.0.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
